--- a/seminar.bib
+++ b/seminar.bib
@@ -2,7 +2,7 @@
   author =       {Robert D. Cameron},
   title =        "{Four Concepts in Programming Language Description: Syntax, Semantics, Pragmatics and Metalanguage}",
   date =         {January 7},
-  year =         "2002  (accessed May 5, 2021)",
+  year =         "2002 (accessed May 5, 2021)",
   url =          "https://www2.cs.sfu.ca/~cameron/Teaching/383/syn-sem-prag-meta.html"
 }
 
@@ -10,7 +10,7 @@
   author =       {Aaron Turon},
   title =        "{Abstraction without overhead: traits in Rust}",
   date =         {May 11},
-  year =         "2015  (accessed May 5, 2021)",
+  year =         "2015 (accessed May 5, 2021)",
   url =          "https://blog.rust-lang.org/2015/05/11/traits.html"
 }
 
@@ -26,36 +26,43 @@
 @misc{ thecargobook,
   author =       {The Cargo Developers},
   title =        "{The Cargo Book}",
-  year =         "2021  (accessed May 5, 2021)",
+  year =         "2021 (accessed May 5, 2021)",
   url =          "https://doc.rust-lang.org/cargo/"
 }
 
 @misc{ rustbyexample,
   author =       {The Rust Developers},
   title =        "{Rust by Example}",
-  year =         "2021  (accessed May 5, 2021)",
+  year =         "2021 (accessed May 5, 2021)",
   url =          "https://doc.rust-lang.org/rust-by-example/"
 }
 
 @misc{ therustreference,
   author =       {The Rust Developers},
   title =        "{The Rust Reference}",
-  year =         "2021  (accessed May 6, 2021)",
+  year =         "2021 (accessed May 6, 2021)",
   url =          "https://doc.rust-lang.org/reference/"
 }
 
 @misc{ rusttraitsdeepdive,
   author =       {Thomas Heartman},
   title =        "{Rust traits: A deep dive}",
-  year =         "2021  (accessed May 6, 2021)",
+  year =         "2021 (accessed May 6, 2021)",
   url =          "https://blog.logrocket.com/rust-traits-a-deep-dive/"
+}
+
+@misc{ stdvisitwrong,
+  author =       {Matt Kline},
+  title =        "{std::visit is everything wrong with modern C++}",
+  year =         "2021 (accessed May 6, 2021)",
+  url =          "https://bitbashing.io/std-visit.html"
 }
 
 @misc { rustdynamicdispatch,
   author =       {Adam Schwalm},
   title =        "{Exploring Dynamic Dispatch in Rust}",
   date =         {7 March},
-  year =         "2017  (accessed May 6, 2021)",
+  year =         "2017 (accessed May 6, 2021)",
   url =          "https://alschwalm.com/blog/static/2017/03/07/exploring-dynamic-dispatch-in-rust/"
 }
 
