--- a/seminar.tex
+++ b/seminar.tex
@@ -28,8 +28,8 @@
 
 \newcommand{\cpp}{C\texttt{++}\xspace}
 
-\newcommand{\wmcpp}{\mbox{\textsc{wmCPP}}}
-\newcommand{\wmrs}{\mbox{\textsc{wmRS}}}
+\newcommand{\wmcpp}{\mbox{\textsc{wmCPP}}\xspace}
+\newcommand{\wmrs}{\mbox{\textsc{wmRS}}\xspace}
 
 \newenvironment{mintedblock}[1]%[3]%
 {\VerbatimEnvironment
