--- a/seminar.tex
+++ b/seminar.tex
@@ -98,10 +98,8 @@
 
 \input{external_dependency_management}
 \input{main_event_loop}
-\input{communication_environment}
-\input{key_bindings}
+\input{input_bindings}
 \input{clients}
-\input{workspaces}
 
 \input{conclusion}
 
