--- a/seminar.tex
+++ b/seminar.tex
@@ -81,8 +81,9 @@
   \IEEEauthorblockN{Max van Deurzen}
   \IEEEauthorblockA{
     \textit{Technische Universität München}\\
-    Munich, Germany\\[0.08cm]
-  \texttt{m.deurzen@tum.de}}
+    Munich, Germany\\
+  \texttt{m.deurzen@tum.de}}\\
+  \vspace*{20pt} \normalsize  \today{}\vspace*{-20pt}
 }
 
 \maketitle
