--- a/seminar.bib
+++ b/seminar.bib
@@ -14,6 +14,14 @@
   url =          "https://blog.rust-lang.org/2015/05/11/traits.html"
 }
 
+@misc { rustclosureshard,
+  author =       {Steve Donovan},
+  title =        "{Why Rust Closures are (Somewhat) Hard}",
+  date =         {August 18},
+  year =         "2018 (accessed May 18, 2021)",
+  url =          "https://stevedonovan.github.io/rustifications/2018/08/18/rust-closures-are-hard.html"
+}
+
 @inproceedings{ cppstd,
   author =       {ISO/IEC},
   title =        "{ISO International Standard ISO/IEC 14882:2020(E) – Programming Language C\texttt{++}}",
