--- a/input_bindings.tex
+++ b/input_bindings.tex
@@ -27,36 +27,29 @@ input  state  abstractions to  \textit{closures}  that  call  into part  of  the
 (parts redacted for clarity).
 
 \begin{rustblock}
+  #[derive(Clone, Copy, PartialEq, Eq, Hash)]
   pub enum MouseEventKind {
     Press, Release, Motion,
   }
 \end{rustblock}
 
-\vspace{0.15cm}
-\begin{minipage}{0.45\linewidth}
 \begin{rustblock}
-pub enum Button {
-  Left,
-  Middle,
-  Right,
-  ScrollUp,
-  // ...
-}
+  #[derive(Clone, Copy, PartialEq, Eq, Hash)]
+  pub enum Button {
+    Left, Middle, Right, ScrollUp, // ...
+  }
 \end{rustblock}
-\end{minipage}
-\begin{minipage}{0.50\linewidth}
 \begin{rustblock}
-pub enum Modifier {
-  Ctrl,
-  Shift,
-  Super,
-  Alt,
-  // ...
-}
+  #[repr(u8)]
+  #[derive(Clone, Copy, PartialEq, Eq, Hash)]
+  pub enum Modifier {
+    Ctrl = 1, Shift = 2, Super = 4, Alt = 8,
+    // ...
+  }
 \end{rustblock}
-\end{minipage}\\
 
 \begin{rustblock}
+  #[derive(PartialEq, Eq)]
   pub struct MouseInput {
     pub button: Button,
     pub modifiers: HashSet<Modifier>,
@@ -64,6 +57,7 @@ pub enum Modifier {
 \end{rustblock}
 
 \begin{rustblock}
+  #[derive(PartialEq, Eq, Hash)]
   pub struct MouseEvent {
     pub kind: MouseEventKind,
     pub input: MouseInput,
@@ -78,8 +72,8 @@ fired (and propagated up through \texttt{Connection::step}) whenever a button is
 pressed.  The  event's input  \textit{modifiers}  are  contained within  a  Rust
 \texttt{HashSet},  as  ordering  and  possible duplicates  are  irrelevant.  Its
 \texttt{window}  field is  to optionally  contain the  unique identifier  of the
-window  that was  clicked on  (if any).  The representation  of key  bindings is
-similar to the above, but instead  of mouse buttons it includes non-modifier key
+window that was clicked on (if any). The representation of key events is similar
+to  the  above, but  instead  of  mouse  buttons  it includes  non-modifier  key
 identifiers.
 
 The actual  mapping between these input  abstractions and hooks into  the window
@@ -112,21 +106,75 @@ that   hook   into   (i.e.   take   as   parameter)   a   \textit{mutable}---or,
 more  semantically  explicative:  \textit{exclusive}---reference  to  the  model
 instance\cite{therustbook}. \mintinline{rust}{FnMut}  is a trait  that describes
 the calling of a function that  is allowed to change (\textit{mutate}) state; it
-permits its  implementors to use  call syntax, such that  they can act  and look
-like  regular  function  pointers. \mintinline{rust}{Box}  \textit{boxes}  up  a
-value, storing  it on the heap  and yielding a  pointer to it (under  the hood).
-Specifically,  here, that  means  that \textit{some}  type  that implements  the
-\mintinline{rust}{FnMut} trait and takes a mutable reference to a model instance
-(\mintinline{rust}{dyn FnMut(&mut  Model<'_>)}) is  boxed up  and stored  on the
-heap  for  future  reference.  We require  the  use  of  \mintinline{rust}{Box},
-as   we  want   to   be  able   to  store   \textit{any   implementor}  of   the
-\mintinline{rust}{FnMut} trait. To do so, Rust will rely on dynamic dispatch, as
-the size of the implementor object is  not known until runtime, and it therefore
-cannot  be stored  on the  stack\cite{rustclosureshard}. The  advantage of  this
-approach  is that  it facilitates  the changing  of input  bindings at  runtime,
-allowing  for  multi-hierarchical  input  bindings, as  well  as  user-initiated
-binding customization without requiring program restart.
+permits  its  implementors to  use  call  syntax, such  that  they  can act  and
+look like  regular function  pointers. \mintinline{rust}{Box}  \textit{boxes} up
+a  value,  storing  it  on  the  heap  and  yielding  a  pointer  to  it  (under
+the  hood).  Specifically,  here,  that   means  that  \textit{some}  type  that
+implements  the \mintinline{rust}{FnMut}  trait  and takes  a mutable  reference
+to  a model  instance  (\mintinline{rust}{dyn FnMut(&mut  Model<'_>)}) is  boxed
+up  and  stored  on the  heap  for  future  reference.  We require  the  use  of
+\mintinline{rust}{Box}, as we want to  be able to store \textit{any implementor}
+of  the \mintinline{rust}{FnMut}  trait. To  do so,  Rust will  rely on  dynamic
+dispatch, as the size of the implementor  object is not known until runtime, and
+it therefore cannot be stored on the stack\cite{rustclosureshard}. The advantage
+of  this approach  is that  it  facilitates the  changing of  input bindings  at
+runtime, allowing for multi-mode hierarchical input bindings, as well as dynamic
+user-initiated binding customizations.
 
+To      be      able       to      use      \mintinline{rust}{KeyInput}      and
+\mintinline{rust}{MouseInput}  as  keys  to  the  \mintinline{rust}{KeyBindings}
+and  \mintinline{rust}{MouseBindings}   \mintinline{rust}{HashMap}s,  they  must
+satisfy   several   conditions.   These   conditions   are   expressed   through
+the  trait   bounds  \mintinline{rust}{PartialEq},   \mintinline{rust}{Eq},  and
+\mintinline{rust}{Hash},   respectively   defining   partial   equivalence   and
+equivalence relations,  enabling the  comparison for  (partial) equality,  and a
+hash function, allowing instances of its implementors to be \textit{hashed} with
+an  implementation  of  \mintinline{rust}{Hasher}.  \mintinline{rust}{PartialEq}
+and    \mintinline{rust}{Eq}    can    be    automatically    implemented    for
+\mintinline{rust}{KeyInput} and  \mintinline{rust}{MouseInput} by making  use of
+Rust's \mintinline{rust}{derive} attribute. This  attribute asks the compiler to
+provide  basic  implementations  for  built-in (and  even  self-written,  if  an
+implementation  is  first  defined  using  \textit{procedural  macros})  traits,
+given  that   the  trait   and  the  type   requiring  the   implementation  are
+\textit{derivable}.  For \mintinline{rust}{PartialEq}  and \mintinline{rust}{Eq}
+in  particular,  all  fields  of a  to-be-derived  compound  type  \textit{must}
+already   implement   \mintinline{rust}{PartialEq}  and   \mintinline{rust}{Eq},
+which  is  the case  for  \mintinline{rust}{MouseEvent}'s  fields given  in  the
+example above.  The same  condition holds for  \mintinline{rust}{Hash}, although
+\mintinline{rust}{HashSet},  a field  of  \mintinline{rust}{MouseInput}, is  not
+automatically derivable. To satisfy  the \mintinline{rust}{Hash} trait bound for
+\mintinline{rust}{MouseInput}, it  must therefore  be defined manually.  To this
+end, each variant of  \textsc{wmRS}'s \mintinline{rust}{Modifier} enumeration is
+represented by an unsigned 8-bit integer value (\mintinline{rust}{#[repr(u8)]}).
+The values are  assigned in such a manner that  the \mintinline{rust}{enum} acts
+as a collection  of \textit{bit flags}, resolving each  variant \textit{and} the
+logical  disjunction  of  any  combination  of variants  into  a  unique  value.
+\mintinline{rust}{MouseInput}'s   \mintinline{rust}{Hash}  implementation   then
+looks as follows.
 
-% Discuss {Build,}Hashers -> more efficient as we have unique keys (input bindings),
+\begin{rustblock}
+impl Hash for MouseInput {
+  fn hash<H: Hasher>(&self, state: &mut H) {
+    self.button.hash(state);
+    self.modifiers.iter()
+      .fold(0u8, |acc, &m| acc | m as u8)
+      .hash(state);
+  }
+}
+\end{rustblock}
+
+Hashing   works   relative  to   \textit{some}   object   that  implements   the
+\mintinline{rust}{Hasher}  trait (\mintinline{rust}{<H: Hasher>}).  The  methods
+required by  \mintinline{rust}{Hasher} are to  contain the logic of  the hashing
+function in  use, and an  instance of an implementor  of the trait  will usually
+represent some  \textit{state} that changes as  data is being hashed.  The final
+state of such an instance then represents the hashed value. To obtain the hashed
+value  of  a  \mintinline{rust}{MouseInput}  instance,  we  change,  in  ordered
+succession, the state  of the \mintinline{rust}{Hasher} object  by supplying the
+hasher  the \mintinline{rust}{button}  field's  value, followed  by the  logical
+disjunction of all of the  \mintinline{rust}{Modifier} variants contained in the
+\mintinline{rust}{modifiers} field.
+
+% Discuss {Build,}Hashers -> more efficient as we have known-to-be-distinct keys (input bindings),
+% Pass-through hasher
 % therefore we don't require complex collision safety etc.
